--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     </div>
     <!-- /.wrapper -->
 
-    <div class="wrapper white-wrapper">
+    <div class="wrapper white-wrapper" id="steps">
       <div class="container inner">
         <h2 class="section-title mb-40 text-center">From One to Five</h2>
         <div class="row gutter-50 gutter-md-30 process-wrapper line text-center">
@@ -304,18 +304,17 @@
                         <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
                       </div>
                       <h4 class="panel-title mb-0">Accelerate</h4>
+                      <p class="mb-0">
+                        <a href="#steps">Step 1 and 2</a></p>
                     </div>
                     <!--/.panel-heading -->
                     <div class="panel-body">
                       <table class="table">
                         <tr>
-                          <td><strong>USP</strong> Strategy </td>
+                          <td><strong>Strategy</strong> workshop to develop USP's</td>
                         </tr>
                         <tr>
-                          <td><strong>5 year</strong> plan development </td>
-                        </tr>
-                        <tr>
-                          <td><strong>Monthly</strong> Feedback </td>
+                          <td>Formulation of a 5-year <strong>development plan</strong></td>
                         </tr>
 
 
@@ -341,13 +340,12 @@
                         <div class="icon icon-svg mb-20"><img src="style/images/icons/sm-management.png" alt=""></div>
                       </div>
                       <h4 class="panel-title mb-0">Connect</h4>
+                      <p class="mb-0">
+                        <a href="#steps">Step 3</a></p>
                     </div>
                     <!--/.panel-heading -->
                     <div class="panel-body">
                       <table class="table">
-                        <tr>
-                          <td><strong>Access</strong> to Coaching </td>
-                        </tr>
                         <tr>
                           <td><strong>Join</strong> Community </td>
                         </tr>
@@ -355,7 +353,7 @@
                           <td><strong>Participate</strong> Events </td>
                         </tr>
                         <tr>
-                          <td><strong>Monthly</strong> Feedback </td>
+                          <td>Monthly Credits to Get <strong>Access to Coaching</strong></td>
                         </tr>
 
 
@@ -377,6 +375,8 @@
                         <div class="icon icon-svg mb-20"><img src="style/images/icons/st-handshake.png" alt=""></div>
                       </div>
                       <h4 class="panel-title mb-0">Invest</h4>
+                      <p class="mb-0">
+                        <a href="#steps">Step 4 and 5</a></p>
                     </div>
                     <!--/.panel-heading -->
                     <div class="panel-body">
