update services section

--- a/index.html
+++ b/index.html
@@ -323,8 +323,9 @@
                     </div>
                     <!--/.panel-body -->
 
-                    <div class="panel-footer"><a href="#" class="btn" data-toggle="modal"
-                        data-target="#modal-03">Contact us</a></div>
+                    <div class="panel-footer"><a href="#" class="btn btn-s" data-toggle="modal"
+                        data-target="#modal-03">Hire NextCycle</a></div>
+                        <p>One-time fee</p>
                   </div>
                   <!--/.pricing -->
                 </div>
@@ -361,8 +362,9 @@
                       </table>
                     </div>
                     <!--/.panel-body -->
-                    <div class="panel-footer"><a href="#" class="btn" data-toggle="modal"
-                        data-target="#modal-03">Contact us</a></div>
+                    <div class="panel-footer"><a href="#" class="btn btn-s" data-toggle="modal"
+                        data-target="#modal-03">Get Credits</a></div>
+                        <p>Monthly fee</p>
                   </div>
                   <!--/.pricing -->
                 </div>
@@ -382,28 +384,21 @@
                     <div class="panel-body">
                       <table class="table">
                         <tr>
-                          <td><strong>Connect</strong> Investors </td>
+                          <td><strong>Matchmaking</strong> Investors & Startups</td>
                         </tr>
                         <tr>
-                          <td><strong>Manage</strong> Investments </td>
+                          <td><strong>Tracking</strong> Progress on Formulated Goals</td>
                         </tr>
                         <tr>
-                          <td><strong>Report</strong> to Investors </td>
+                          <td><strong>Facilitating</strong> Investor Meetings</td>
                         </tr>
-                        <tr>
-                          <td><strong>Active</strong> Coaching </td>
-                        </tr>
-                        <tr>
-                          <td> Weekly <strong>Reports</strong></td>
-                        </tr>
-                        <tr>
-                          <td> 7/24 <strong>Support</strong></td>
-                        </tr>
+                        
                       </table>
                     </div>
                     <!--/.panel-body -->
-                    <div class="panel-footer"><a href="#" class="btn" data-toggle="modal"
-                        data-target="#modal-03">Contact us</a></div>
+                    <div class="panel-footer"><a href="#" class="btn btn-s" data-toggle="modal"
+                        data-target="#modal-03">Get Funded</a></div>
+                        <p>Commission fee</p>
                   </div>
                   <!--/.pricing -->
                 </div>
