--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                 <div id="accordion-collapse-1-1" class="collapse show" aria-labelledby="accordion-heading-1-1"
                   data-parent="#accordion-1">
                   <div class="card-body">
-                    <p>Do you have a startup or a brilliant idea and are you looking for funding? Apply to the NextCycle
+                    <p>Do you have a startup and are you looking for the Next Investment Cycle? Apply to the NextCycle
                       community and allow us to accelerate your startup, connect you with a network of professional
                       coaches and attract private investors.</p>
                   </div>
@@ -475,7 +475,7 @@
                 <div id="accordion-collapse-1-2" class="collapse" aria-labelledby="accordion-heading-1-2"
                   data-parent="#accordion-1">
                   <div class="card-body">
-                    <p>Do you have an ambition for startups? Are you an expert in a specific field that can be of added
+                    <p>Do you want to make a positive impact to startups? Are you an expert in a specific field that can be of added
                       value for entrepreneurs and investors? Join the NextCycle community and become a startup coach!
                     </p>
                   </div>
@@ -497,7 +497,7 @@
                 <div id="accordion-collapse-1-3" class="collapse" aria-labelledby="accordion-heading-1-3"
                   data-parent="#accordion-1">
                   <div class="card-body">
-                    <p>Are you interested in funding startups? Are you looking for a reliable partner when it comes to
+                    <p>Are you interested in funding startups active in our focus areas? Are you looking for a reliable partner when it comes to
                       managing investments, reporting progress and asessing investment opportunities? Join the NextCycle
                       investor community!</p>
                   </div>
