about us golvend lijntje en footer adjustment link

--- a/community/ez360.html
+++ b/community/ez360.html
@@ -256,7 +256,7 @@
 
         <!-- /.widget -->
       </div>
-      <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a href="https://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
+      <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a href="http://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
       <!-- /.container -->
     </footer>
     </div>
