--- a/community/fibibuffer.html
+++ b/community/fibibuffer.html
@@ -263,7 +263,7 @@ You help prevent 'single use' in the business chain.</p>
 
         <!-- /.widget -->
       </div>
-      <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a href="https://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
+      <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a href="http://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
       <!-- /.container -->
     </footer>
     </div>
