--- a/about.html
+++ b/about.html
@@ -135,10 +135,16 @@
       </div>
       <!-- /.container -->
 
+      <div class="divider"><svg xmlns="http://www.w3.org/2000/svg" class="fill-light-wrapper" preserveAspectRatio="none" viewBox="0 0 1070 20.98">
+        <path d="M0,0V21H1070V0A6830.24,6830.24,0,0,1,0,0Z" /></svg></div>
+        
+    </div>
+        <!-- /.wrapper -->
 
-      <div class="container inner" style="margin-top: -4rem;">
-        <h3 class="display-3 text-center">Save your time and money <br class="d-none d-lg-block" />by choosing our
-          professional team of coaches.</h3>
+      <div class="wrapper light-wrapper" id="coaches">
+      <div class="container inner">
+        <h3 class="display-3 text-center">Realize the next Innovation and Investment Cycle<br class="d-none d-lg-block" /> by choosing our
+          diverse team of talented coaches.</h3>
         <div class="space40"></div>
         <div class="row text-center">
           <div class="col-md-3">
@@ -285,7 +291,7 @@
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/laurens-van-roomen-43564656" target="_blank"><i
                     class="jam jam-linkedin"></i></a></li>
-              <li><a href="https://www.laurensvanroomen.nl" target="_blank"><i class="icofont-link"></i></a></li>
+              <li><a href="http://www.laurensvanroomen.nl" target="_blank"><i class="icofont-link"></i></a></li>
             </ul>
           </div>
           <!--/column -->
@@ -469,7 +475,7 @@
         <!-- /.widget -->
       </div>
       <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a
-          href="https://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
+          href="http://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
       <!-- /.container -->
     </footer>
   </div>
