--- a/impact-areas.html
+++ b/impact-areas.html
@@ -168,7 +168,7 @@
             </div>
             <!-- /.container -->
             <div class="divider"><svg xmlns="http://www.w3.org/2000/svg" class="fill-light-wrapper" preserveAspectRatio="none" viewBox="0 0 1070 20.98">
-  <path d="M0,0V21H1070V0A6830.24,6830.24,0,0,1,0,0Z" /></svg></div>
+            <path d="M0,0V21H1070V0A6830.24,6830.24,0,0,1,0,0Z" /></svg></div>
           </div>
           <!-- /.wrapper -->
 
@@ -396,7 +396,7 @@
 
         <!-- /.widget -->
       </div>
-      <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a href="https://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
+      <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a href="http://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
       <!-- /.container -->
     </footer>
     </div>
