--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
       <!-- /.widget -->
     </div>
     <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a
-        href="https://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
+        href="http://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
     <!-- /.container -->
   </footer>
   </div>
