--- a/community/fibibuffer.html
+++ b/community/fibibuffer.html
@@ -118,31 +118,33 @@ You help prevent 'single use' in the business chain.</p>
                       </li>
                     <li>
                       <h5 class="mb-5">Annual Revenue</h5>
-                      <p>-</p>
+                      <p>Almost break-even</p>
                     </li>
                   </ul>
                 </div>
                 <!--/column -->
               </div>
               <!--/.row -->
-              <!-- <div class="space60"></div>
+              <div class="space30"></div>
               <h2>Funding</h2>
               <div class="row no-gutters">
                 <ul class="progress-list">
                     <li>
-                      <p>€0 / 0 goal</p>
-                      <div class="progressbar line blue" data-value="100"></div>
+                      <p>€30.000 / 180.000 goal</p>
+                      <div class="progressbar line blue" data-value="17"></div>
                     </li>
                     </ul>
-            </div> -->
+            </div>
             <!--/.row -->
 
             <p>Strenghts/ Weaknesses</p>
-            <span class="badge badge-pill badge-success">Development</span>
-            <span class="badge badge-pill badge-success">Marketing</span>
-            <span class="badge badge-pill badge-success">Support</span>
-            <span class="badge badge-pill badge-warning">Networking</span>
+            <span class="badge badge-pill badge-success">Patented Product</span>
+            <span class="badge badge-pill badge-success">Sustainable</span>
+            <span class="badge badge-pill badge-success">Future Proof</span>
+            <span class="badge badge-pill badge-success">Biodegradable</span>
+            <span class="badge badge-pill badge-warning">Marketing</span>
             <span class="badge badge-pill badge-danger">Sales</span>
+            <span class="badge badge-pill badge-danger">Support</span>
             
 
 
