--- a/community/ez360.html
+++ b/community/ez360.html
@@ -118,7 +118,7 @@
                 <!--/column -->
               </div>
               <!--/.row -->
-              <div class="space60"></div>
+              <div class="space30"></div>
               <h2>Funding</h2>
               <div class="row no-gutters">
                 <ul class="progress-list">
@@ -131,9 +131,11 @@
             <!--/.row -->
 
             <p>Strenghts/ Weaknesses</p>
-            <span class="badge badge-pill badge-success">Development</span>
+            <span class="badge badge-pill badge-success">Development team</span>
+            <span class="badge badge-pill badge-success">Recurring Revenue</span>
+            <span class="badge badge-pill badge-success">Flexible team</span>
             <span class="badge badge-pill badge-success">Marketing</span>
-            <span class="badge badge-pill badge-success">Support</span>
+            <span class="badge badge-pill badge-success">Customer Support</span>
             <span class="badge badge-pill badge-warning">Networking</span>
             <span class="badge badge-pill badge-danger">Sales</span>
             
