--- a/community/capss-infusion.html
+++ b/community/capss-infusion.html
@@ -94,6 +94,15 @@
                   <p class="lead">
                     Over time active ingredients may settle, separate, lose their efficacy and expire. In other cases, products require a complicated mixing process by the consumer, which is often time consuming, prone to error and messy. With the CAPss mixing technology the main ingredients are stored in a container underneath a cap and separated from the liquid in the base. The Widget reduces or prevents degradation and eliminates the need for chemical preservatives in perishable items. For chemical, medical and pharmaceutical applications, the precise dosing and instant mixing provided by CAPss eliminates complexity and allows for revolutionary packaging systems.</p>
                   <p>Possible applications include beverages, CBD products, nutraceuticals, aeration, hygiene, hair care, pharmaceuticals, chemical and much more. CAPss can be customized to fit an array of base containers in a variety of design & aesthetic options. Upon opening the container, CAPss automatically propels and instantly mixes a stream of active ingredients (vitamins, flavors, serums, colors, etc.) into the base, providing an exciting visual effect and confirmation to the user that they have activated their product. In this way the consumer is involved in the creation of the end product.</p>
+                  <p>Strengths CAPss packaging innovation</br>
+                    •	Unique closure system that fits perfectly with an increasing trend of healthy active ingredients.</br>
+                    •	CAPss extends shelf life and improves the quality of the products on which it is used.</br>
+                    •	Wow factor, sound and visual pleasure for the consumer.
+                    </p>
+                    <p>Opportunity</br>
+                      •	There is a growing demand for functional drinks, the problem is that the active ingredients are sensitive  to light exposure. With the CAPss packaging innovation, the functional active ingredients from the drink are stored in the cap and mixed by the consumer himself. In this way we involve the consumer in the creation of the end result.</br>
+                      •	At the moment we are working on a new patent application, as we have invented simplifications during development, that we can protect again for 20 years in a new patent.
+                      </p>
 
                 </div>
                 
@@ -113,31 +122,37 @@
                       </li>
                     <li>
                       <h5 class="mb-5">Annual Revenue</h5>
-                      <p>-</p>
+                      <p>Expected revenue 2021-2022-2023
+                        2021: 250.000 euro
+                        2022: 650.000 euro
+                        2023: 1.750.000 euro
+                        </p>
                     </li>
                   </ul>
                 </div>
                 <!--/column -->
               </div>
               <!--/.row -->
-              <!-- <div class="space60"></div>
+              <div class="space30"></div>
               <h2>Funding</h2>
               <div class="row no-gutters">
                 <ul class="progress-list">
                     <li>
-                      <p>€0 / 0 goal</p>
-                      <div class="progressbar line blue" data-value="100"></div>
+                      <p>€350.000 / 600.000 goal</p>
+                      <div class="progressbar line blue" data-value="58"></div>
                     </li>
                     </ul>
-            </div> -->
+            </div>
             <!--/.row -->
 
             <p>Strenghts/ Weaknesses</p>
-            <span class="badge badge-pill badge-success">Development</span>
-            <span class="badge badge-pill badge-success">Marketing</span>
-            <span class="badge badge-pill badge-success">Support</span>
-            <span class="badge badge-pill badge-warning">Networking</span>
-            <span class="badge badge-pill badge-danger">Sales</span>
+            <span class="badge badge-pill badge-success">Worldwide patent</span>
+            <span class="badge badge-pill badge-success">Licensing business model</span>
+            <span class="badge badge-pill badge-success">Scalability</span>
+            <span class="badge badge-pill badge-success">New experienced team of entrepreneurs</span>
+            <span class="badge badge-pill badge-danger">Not yet industrialized</span>
+            <span class="badge badge-pill badge-danger">No revenue yet</span>
+            <span class="badge badge-pill badge-danger">Patent dates from 2007</span>
             
 
 
