update header 3 impact categories

--- a/about.html
+++ b/about.html
@@ -46,25 +46,16 @@
             </li>
 
             <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="impact-areas.html">Impact Areas</a>
-              <ul class="dropdown-menu">
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-mobility">Next
-                    Mobility</a>
-
-                </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-energy">Next
-                    Energy</a>
-
-                </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-food">Next
-                    Food</a>
-
-                </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-living">Next
-                    Living</a>
-
-                </li>
-
-              </ul>
+                              <ul class="dropdown-menu">
+                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-living">Next Living</a>
+  
+                  </li>
+                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-retail">Next Retail</a>
+  
+                  </li>
+                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-technology">Next Technology</a>
+  
+                </ul>
             </li>
             <li class="nav-item"><a class="nav-link" href="community.html">Community</a>
 
