--- a/community/capss-infusion.html
+++ b/community/capss-infusion.html
@@ -41,19 +41,14 @@
             </li>
 
             <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="../impact-areas.html">Impact Areas</a>
-              <ul class="dropdown-menu">
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../impact-areas.html#next-mobility">Next Mobility</a>
-
-                </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../impact-areas.html#next-energy">Next Energy</a>
-
-                </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../impact-areas.html#next-food">Next Food</a>
-
-                </li>
+                           <ul class="dropdown-menu">
                 <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../impact-areas.html#next-living">Next Living</a>
 
                 </li>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../impact-areas.html#next-retail">Next Retail</a>
+
+                </li>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../impact-areas.html#next-technology">Next Technology</a>
 
               </ul>
             </li>
