community update categories

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
-              <h5>Next Food</h5>
+              <h5>Next Retail</h5>
               <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
                 odio. Cum sociis natoque penatibus magnis dis.</p>
               <a href="impact-areas.html#next-food" class="btn btn-s btn-rose">Read More</a>
@@ -575,7 +575,7 @@
                   <img src="style\images\nextcycle\startups\capss\logo.png" class="img-fluid"
                     style="padding-bottom: 20px;" alt="Capss logo">
                   <h5 class="mb-15">Capss Infusion</h5>
-                  <div class="meta mb-10">Next Food</div>
+                  <div class="meta mb-10">Next Retail</div>
                   <p class="mb-10">An innovative patented dosing cap / dispensing closure that provides endless
                     opportunities in beverage applications.
                   </p>
@@ -595,7 +595,7 @@
                   <img src="style\images\nextcycle\startups\fibibuffer\logo.png" class="img-fluid"
                     style="padding-bottom: 20px;" alt="FIBI-buffer logo">
                   <h5 class="mb-15">FIBI-BUFFER</h5>
-                  <div class="meta mb-10">Next Food</div>
+                  <div class="meta mb-10">Next Retail</div>
                   <p class="mb-10">FIBI-buffer® packaging material | Your sensitive products protected in an
                     environmentally friendly way!
                   </p>
