--- a/about.html
+++ b/about.html
@@ -277,7 +277,7 @@
             <figure class="img-blob blob8 mb-25"><img src="style/images/nextcycle/coaches/laurens-van-roomen.jpg"
                 style="width: 10rem" alt="" /></figure>
             <h4 class="mb-15">Laurens van Roomen</h4>
-            <div class="meta mb-5">CEO & Entrepreneur</div>
+            <div class="meta mb-5">CEO & Freelancer, Promising 15 of DUB, Sprout 25 below 25</div>
             <p>xx</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/laurens-van-roomen-43564656" target="_blank"><i
