--- a/index.html
+++ b/index.html
@@ -108,25 +108,15 @@
         <!-- /.row -->
 
         <div class="row text-center">
+
+          <div class="space30 d-none d-md-block d-lg-none"></div>
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
-              <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
-              <h5>Next Mobility</h5>
+              <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
+              <h5>Next Living</h5>
               <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
                 odio. Cum sociis natoque penatibus magnis dis.</p>
-              <a href="impact-areas.html#next-mobility" class="btn btn-s btn-blue">Read More</a>
-            </div>
-            <!--/.box -->
-          </div>
-          <!--/column -->
-          <div class="col-md-6 col-lg-3">
-            <div class="box bg-white shadow">
-              <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt=""></div>
-              <h5>Next Energy
-              </h5>
-              <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
-                odio. Cum sociis natoque penatibus magnis dis.</p>
-              <a href="impact-areas.html#next-energy" class="btn btn-s btn-orange">Read More</a>
+              <a href="impact-areas.html#next-living" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
           </div>
@@ -139,23 +129,40 @@
               <h5>Next Retail</h5>
               <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
                 odio. Cum sociis natoque penatibus magnis dis.</p>
-              <a href="impact-areas.html#next-food" class="btn btn-s btn-rose">Read More</a>
+              <a href="impact-areas.html#next-retail" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
           </div>
           <!--/column -->
-          <div class="space30 d-none d-md-block d-lg-none"></div>
+
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
-              <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
-              <h5>Next Living</h5>
+              <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
+              <h5>Next Technology</h5>
               <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
                 odio. Cum sociis natoque penatibus magnis dis.</p>
-              <a href="impact-areas.html#next-living" class="btn btn-s btn-green">Read More</a>
+              <a href="impact-areas.html#next-technology" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
           </div>
           <!--/column -->
+
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white shadow">
+              <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt=""></div>
+              <h5>Next ?
+              </h5>
+              <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
+                odio. Cum sociis natoque penatibus magnis dis.</p>
+              <a href="impact-areas.html#next-energy" class="btn btn-s btn-blue">Read More</a>
+            </div>
+            <!--/.box -->
+          </div>
+          <!--/column -->
+
+
+
+
 
         </div>
         <!--/.row -->
@@ -522,21 +529,17 @@
         <div class="row">
           <div class="col-md-8 offset-md-2">
             <div class="row counter">
-              <div class="col-md-4 color-default">
-                <h3 class="color-default"><span class="value">110</span>K</h3>
-                <p>Minutes of coaching sessions</p>
+              <div class="col-md-6 color-default">
+                <h3 class="color-default"><span class="value">12</span></h3>
+                <p>Startup Coaches</p>
               </div>
               <!--/column -->
-              <div class="col-md-4 color-default">
-                <h3 class="color-default">€<span class="value">150</span>K</h3>
+              <div class="col-md-6 color-default">
+                <h3 class="color-default">€<span class="value">405</span>K</h3>
                 <p>Invested in startups</p>
               </div>
               <!--/column -->
-              <div class="col-md-4 color-default">
-                <h3 class="color-default"><span class="value">100</span>K</h3>
-                <p>Nog iets</p>
-              </div>
-              <!--/column -->
+
             </div>
             <!--/.row -->
           </div>
