--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
       <div class="wrapper light-wrapper" id="coaches">
       <div class="container inner">
         <h3 class="display-3 text-center">Realize the next Innovation and Investment Cycle<br class="d-none d-lg-block" /> by choosing our
-          diverse team of talented coaches.</h3>
+          diverse team of experienced coaches.</h3>
         <div class="space40"></div>
         <div class="row text-center">
           <div class="col-md-3">
@@ -347,6 +347,7 @@
       <!-- /.container -->
 
     </div>
+
     <!-- /.wrapper -->
 
     <!--THE CONTACT FORM-->
@@ -446,7 +447,11 @@
     <!--/.modal -->
 
 
+    <div class="divider"><svg xmlns="http://www.w3.org/2000/svg" class="fill-footer-dark-wrapper" preserveAspectRatio="none" viewBox="0 0 1070 39.07">
+      <path d="M1070,39.07H0V21a6818.1,6818.1,0,0,1,1070,0Z"></path></svg></div>
+      
     <footer class="dark-wrapper inverse-text text-center">
+      
       <div class="container inner pt-80 pb-80">
         <div class="widget"> <img src="#"
             srcset="style\images\nextcycle\logo-light.png 1x, style\images\nextcycle\logo-light@2x.png 2x" alt="" />
