--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     <!--/.panel-body -->
 
                     <div class="panel-footer"><a href="#" class="btn btn-s" data-toggle="modal"
-                        data-target="#modal-03">Hire NextCycle</a></div>
+                        data-target="#modal-03">Get Started</a></div>
                         <p>One-time fee</p>
                   </div>
                   <!--/.pricing -->
