--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="col-lg-8 offset-lg-2">
             <h2 class="section-title larger text-center">Our Impact Areas</h2>
             <div class="space30"></div>
-            <h1 class="display-4 text-center">Our focus lies on mature startups, active within one of these 4 impact areas.</h1>
+            <h1 class="display-4 text-center">Our focus lies on mature startups, active within one of these four impact areas.</h1>
             <div class="space30"></div>
           </div>
           <!-- /column -->
@@ -216,11 +216,10 @@
                   <div class="align-self-center">
                     <h3>The Investment Cycle</h3>
                     <div class="space10"></div>
-                    <p>Getting funded is crucial for a startup, it is the fuel that makes it possible to take the startup to the next level. However, next to receiving
-                      the investment, it is also important to see what else the private investor can bring to the table. There must be a good match between what
-                      the startup is looking for and what the investor can bring.
-                      On the other side, for the private investor it can also be challenging to find the right startup to invest in. Having a good match is also important 
-                      here and not having to worry about monitoring progress after the investment was made. Are you ready for the Next Investment Cycle?
+                    <p>Getting funded is crucial for a startup, it is the fuel for taking the next steps. On the other side, the startup
+                      also takes onboard a new co-pilot, therefore it is crucial to have a good fit between the startup and investor.
+                      However, it can be challenging for a startup, but also investor, to find the right match. Make connections, have a good match
+                      and get funded. Are you ready for the Next Investment Cycle?
                     </p>
 
                   </div>
@@ -251,7 +250,7 @@
           <div class="col-md-2"> <span class="icon icon-blob icon-blob-orange color-orange mb-30"><i
                 class="icofont-map-pins"></i><span class="step bg-orange">2</span></span>
             <h5>Roadmap</h5>
-            <p>Formulating a plan for the next:</br>5 years, 4 months, 3 weeks, 2 days, 1 hour.</p>
+            <p>Formulating a plan for the coming </br>5 years.</p>
           </div>
           <!--/column -->
           <div class="col-md-2"> <span class="icon icon-blob icon-blob-pink color-pink mb-30"><i
