--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="container text-center">
             <h2 class="section-title">Hello! We're NextCycle </h2>
             <p class="lead larger">We connect start-ups with experts to accelerate the next</br> innovation cycle &
-              attract private investors to realize te next</br> investment cycle.</p>
+              attract private investors to realize te next investment cycle.</p>
           </div>
           <!-- /.container -->
         </div>
@@ -523,7 +523,7 @@
       <div class="container inner">
         <h2 class="title-color color-gray">Join Our Community</h2>
         <h3 class="display-3 mb-0">We are a community of startups, coaches and investors.<br
-            class="d-none d-lg-block" />Apply to the NextCycle and become part of the journey.</h3>
+            class="d-none d-lg-block" /> Apply to the NextCycle and become part of the journey.</h3>
         <div class="space50"></div>
         <div class="row">
           <div class="col-md-8 offset-md-2">
