impact areas blogs

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="content-overlay">
           <div class="container text-center">
             <h2 class="section-title">Hello! We're NextCycle </h2>
-            <p class="lead larger">We connect start-ups with experts to accelerate the next</br> innovation cycle &
+            <p class="lead larger">We connect start-ups with experts to accelerate the next innovation cycle &
               attract private investors to realize te next investment cycle.</p>
           </div>
           <!-- /.container -->
