--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
           <div class="col-md-8 offset-md-2">
             <div class="row counter">
               <div class="col-md-6 color-default">
-                <h3 class="color-default"><span class="value">12</span></h3>
-                <p>Startup Coaches</p>
+                <h3 class="color-default"><span class="value">12+</span></h3>
+                <p>Top Coaches</p>
               </div>
               <!--/column -->
               <div class="col-md-6 color-default">
