--- a/about.html
+++ b/about.html
@@ -89,6 +89,10 @@
                   <p>"Startups are crucial, more than ever, to transform different industries. And private investors give these startups the fuel that they need to accelerate."</p>
                   <footer class="blockquote-footer">Maurice van den Oever</footer>
                 </blockquote>
+                <ul class="social social-s ml-auto text-center">
+                  <li><a href="https://www.linkedin.com/in/maurice-van-den-oever-235b6a50/" target="_blank"><i class="jam jam-linkedin"></i></a>
+                  </li>
+                </ul>
           </div>
           <!--/column -->
           <div class="space20 d-md-none"></div>
@@ -154,7 +158,7 @@
                 style="width: 10rem" alt="" /></figure>
             <h4 class="mb-15">John de Kok</h4>
             <div class="meta mb-5">CEO, Technobis Group</div>
-            <p>Passion for doing good by doing great for the world.</p>
+            <p>‘Doing good by doing great’</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/jsadekok/" target="_blank"><i class="jam jam-linkedin"></i></a>
               </li>
@@ -166,7 +170,7 @@
                 style="width: 10rem" alt="" /></figure>
             <h4 class="mb-15">Cato Bui</h4>
             <div class="meta mb-5">Agency Strategist & Startup Lead</div>
-            <p>Improve your branding with a digital strategy.</p>
+            <p>'Valueable brand by a digital strategy’</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/catobui/" target="_blank"><i class="jam jam-linkedin"></i></a>
               </li>
@@ -180,8 +184,8 @@
             </h4>
             <div class="meta mb-5">Nr. 1 Youtuber in The Netherlands
             </div>
-            <p>Social Media xx
-            </p></br>
+            <p>‘Drive for being number one’
+            </p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.youtube.com/user/kwebbelkop?hl=nl&gl=NL" target="_blank"><i
                     class="jam jam-youtube"></i></a></li>
@@ -196,7 +200,7 @@
             </h4>
             <div class="meta mb-5">Ceo, Holland Proptech & Contech
             </div>
-            <p>xx</p></br>
+            <p>‘Connect, Match, Innovate’</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/woutertruffino/" target="_blank"><i
                     class="jam jam-linkedin"></i></a></li>
@@ -218,7 +222,7 @@
             </h4>
             <div class="meta mb-5">CEO & Co-Founder Inuka Coaching
             </div>
-            <p>On a mission to make wellbeing accessible for everyone.
+            <p>‘Wellbeing is essential for everyone’
             </p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/ravishmehairjan/" target="_blank"><i
@@ -233,9 +237,9 @@
             <h4 class="mb-15">Geert Wassens
 
             </h4>
-            <div class="meta mb-5">Finance professional at Hardt Hyperloop
+            <div class="meta mb-5">Financial Analyst, Hyperloop
             </div>
-            <p>xx
+            <p>‘Translate ideas in financials’
             </p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/ravishmehairjan/" target="_blank"><i
@@ -250,9 +254,9 @@
             <h4 class="mb-15">Adjiedj Bakas
 
             </h4>
-            <div class="meta mb-5">Trend watcher, public speaker, author and advisor Mark Rutte
+            <div class="meta mb-5">Trend watcher and C-level advisor
             </div>
-            <p>xx
+            <p>‘Be aware of the trends around you’ 
             </p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/ravishmehairjan/" target="_blank"><i
@@ -267,7 +271,7 @@
             <h4 class="mb-15">Jordy van Egmond</h4>
             <div class="meta mb-5">No. 27 DJ Mag Top 100 DJs list (2014)
             </div>
-            <p>xx</p>
+            <p>‘Passion for what you do’</p>
             <ul class="social social-s ml-auto">
               <li><a href="http://aceagency.com/images/factsheets/dyro/dyro.html" target="_blank"><i
                     class="icofont-link"></i></a></li>
@@ -288,8 +292,8 @@
             <figure class="img-blob blob8 mb-25"><img src="style/images/nextcycle/coaches/laurens-van-roomen.jpg"
                 style="width: 10rem" alt="" /></figure>
             <h4 class="mb-15">Laurens van Roomen</h4>
-            <div class="meta mb-5">CEO & Freelancer, Promising 15 of DUB, Sprout 25 below 25</div>
-            <p>xx</p>
+            <div class="meta mb-5">Co-Founder EZ360 & A Lot More</div>
+            <p>'Don't think about it. Do it.'</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/laurens-van-roomen-43564656" target="_blank"><i
                     class="jam jam-linkedin"></i></a></li>
@@ -304,7 +308,7 @@
             <h4 class="mb-15">Cees Dekker
             </h4>
             <div class="meta mb-5">Co-founder SustainableMotion</div>
-            <p>Connecting academic students and graduates with organizations.</p>
+            <p>‘Using the triple helix’</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/soufianebouarfa" target="_blank"><i
                     class="jam jam-linkedin"></i></a></li>
@@ -319,7 +323,7 @@
             <h4 class="mb-15">Soufiane Bouarfa
             </h4>
             <div class="meta mb-5">Entrepreneur Future of Mobility</div>
-            <p>xx</p></br>
+            <p>‘Driving the future of mobility’</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/soufianebouarfa" target="_blank"><i
                     class="jam jam-linkedin"></i></a></li>
@@ -335,7 +339,7 @@
             </h4>
             <div class="meta mb-5">Ceo, Value Connect
             </div>
-            <p>Helping companies through management + consulting services.
+            <p>'Energized by building relationships’ 
             </p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/ravishmehairjan/" target="_blank"><i
