--- a/community/capss-infusion.html
+++ b/community/capss-infusion.html
@@ -244,6 +244,117 @@
         <!-- /.container -->
       </div>
       <!-- /.wrapper -->
+
+      <div class="wrapper grey-wrapper bg-auto no-overlay bg-image text-center" data-image-src="../style/images/art/map.png">
+        <div class="container inner">
+          <div class="row">
+            <div class="col-md-10 offset-md-1">
+              <h3 class="display-3">Will you join the Next Cycle? Let's work together. <br class="d-none d-lg-block" />If you got any questions, don't hesitate to get in touch with us.</h3>
+              <div class="space30"></div>
+              <!-- <a href="mailto:info@nextcycle.com" class="btn btn-l btn-default mb-0">Apply now</a> -->
+              <div><a href="#" class="btn btn-l btn-default mb-0" data-toggle="modal" data-target="#modal-03">Contact Us</a></div>
+
+            </div>
+            <!-- /column -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.container -->
+      </div>
+
+      <!--THE CONTACT FORM-->
+  <div class="modal fade" id="modal-03" tabindex="-1" role="dialog" aria-labelledby="modal-03" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="container-fluid boxed p-0">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <div class="image-block-wrapper">
+            <div class="image-block col-lg-6">
+              <div class="image-block-bg bg-image" data-image-src="../style/images/art/bg23.jpg"></div>
+            </div>
+            <!--/.image-block -->
+            <div>
+              <div class="row no-gutters">
+                <div class="col-lg-6 offset-lg-6">
+                  <div class="box p-50 d-flex">
+                    <div class="align-self-center">
+                      <h2 class="section-title mb-30">Get in Touch</h2>
+                      <form id="contact-form" method="post" action="contact/contact.php">
+                        <div class="messages"></div>
+                        <div class="controls">
+                          <div class="form-row">
+                            <div class="col-md-6">
+                              <div class="form-group">
+                                <input id="form_name" type="text" name="name" class="form-control"
+                                  placeholder="First Name *" required="required" data-error="First Name is required.">
+                                <div class="help-block with-errors"></div>
+                              </div>
+                            </div>
+                            <div class="col-md-6">
+                              <div class="form-group">
+                                <input id="form_lastname" type="text" name="surname" class="form-control"
+                                  placeholder="Last Name *" required="required" data-error="Last Name is required.">
+                                <div class="help-block with-errors"></div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="form-row">
+                            <div class="col-md-6">
+                              <div class="form-group">
+                                <input id="form_email" type="email" name="email" class="form-control"
+                                  placeholder="Email *" required="required" data-error="Valid email is required.">
+                                <div class="help-block with-errors"></div>
+                              </div>
+                            </div>
+                            <div class="col-md-6">
+                              <div class="form-group">
+                                <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Phone">
+                                <div class="help-block with-errors"></div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="form-row">
+                            <div class="col-md-12">
+                              <div class="form-group">
+                                <textarea id="form_message" name="message" class="form-control" placeholder="Message *"
+                                  rows="4" required="required" data-error="Message is required."></textarea>
+                                <div class="help-block with-errors"></div>
+                              </div>
+                            </div>
+                            <div class="col-md-12">
+                              <input type="submit" class="btn btn-send" value="Send message">
+                            </div>
+                          </div>
+                          <div class="form-row">
+                            <div class="col-md-12">
+                              <p class="text-muted"><strong>*</strong> These fields are required.</p>
+                            </div>
+                          </div>
+                        </div>
+                      </form>
+                      <!-- /form -->
+                    </div>
+                    <!-- /div -->
+                  </div>
+                  <!-- /.box -->
+                </div>
+                <!--/column -->
+              </div>
+              <!--/.row -->
+            </div>
+            <!--/div -->
+          </div>
+          <!--/.image-block-wrapper -->
+        </div>
+        <!--/.boxed -->
+      </div>
+      <!--/.modal-content -->
+    </div>
+    <!--/.modal-dialog -->
+  </div>
+  <!--/.modal -->
     
 
    
