--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
               <h5>Next Living</h5>
-              <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
-                odio. Cum sociis natoque penatibus magnis dis.</p>
+              <p>The way we live in and use our homes is changing all the time. What will be the Next Innovation that will change the way we live forever?</p>
               <a href="impact-areas.html#next-living" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
@@ -127,8 +126,8 @@
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
               <h5>Next Retail</h5>
-              <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
-                odio. Cum sociis natoque penatibus magnis dis.</p>
+              <p>The retail industry is experiencing major changes in order to keep up with consumer demands
+                and expectations. What will the retail experience of the future look like?</p>
               <a href="impact-areas.html#next-retail" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
@@ -139,8 +138,7 @@
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
               <h5>Next Technology</h5>
-              <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
-                odio. Cum sociis natoque penatibus magnis dis.</p>
+              <p>Technology has become a great part of everbody's life. It has the ability to enhance the way we live or solve the problems we are facing.</p>
               <a href="impact-areas.html#next-technology" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
