--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
               <h5>Next Technology</h5>
-              <p>Technology has become a great part of everbody's life. It has the ability to enhance the way we live or solve the problems we are facing.</p>
+              <p>Technology has the ability to enhance the way we live ourlives or solve the problems we are facing. How will technology shape the future?</p>
               <a href="impact-areas.html#next-technology" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
